# Soundpad

./: AddDialog.qml  AppDbContext.cpp  AppDbContext.h  AudioMixer.cpp  AudioMixer.h  CMakeLists.txt  Config.cpp  Config.h  ImageButton.qml  Main.qml  README.md  SoundInfo.cpp  SoundInfo.h  Soundpad.qml  SoundpadController.cpp  SoundpadController.h  VolumeDialog.qml  Wheel.qml  main.cpp  res.qrc
